actualizar property complete
