# config/docs/openapi-spec.json
@@ -2687,7 +2687,7 @@
         "description": "Esta operacion permite crear un property con location y medias.",
         "parameters": [
           {
-            "name": "id",
+            "name": "medias_ids",
             "in": "query",
             "example": "29995f0a-44c1-4a89-91e4-8529927957d9,b9995f0a-44c1-4a89-91e4-8529927957d9",
             "schema": {
@@ -2713,6 +2713,89 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/IdOutput"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "BAD_REQUEST",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequest"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "UNPROCESSABLE_ENTITY",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnprocessableEntity"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "INTERNAL_SERVER_ERROR",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UnexpectedError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/properties/update/{id}": {
+      "put": {
+        "operationId": "updateCompleteProperty",
+        "tags": [
+          "Properties"
+        ],
+        "summary": "Update Property with location and medias",
+        "description": "Esta operacion permite actualizar un property con location y medias.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "example": "29995f0a-44c1-4a89-91e4-8529927957d9",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            },
+            "required": true
+          },
+          {
+            "name": "medias_ids",
+            "in": "query",
+            "example": "29995f0a-44c1-4a89-91e4-8529927957d9,b9995f0a-44c1-4a89-91e4-8529927957d9",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Cuerpo del mensaje para actualizar el property con location y medias.",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PropertyLocationUpdateInput"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BoolOutput"
                 }
               }
             }
@@ -4184,6 +4267,17 @@
             "type": "integer",
             "example": 1,
             "description": "number of garage del property"
+          }
+        }
+      },
+      "PropertyLocationUpdateInput": {
+        "type": "object",
+        "properties": {
+          "property": {
+            "$ref": "#/components/schemas/PropertyInput"
+          },
+          "location": {
+            "$ref": "#/components/schemas/LocationInput"
           }
         }
       },
